# cpp-cli

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/cpp_cli/: cpp_cli.h
src/: CMakeLists.txt  cpp_cli.cpp
tests/: CMakeLists.txt  command.cpp
